hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__struct_field_with_type_parameters_as_return_value.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "T",
            IdentId(3) => "f",
            IdentId(4) => "number",
            IdentId(5) => "s",
            IdentId(6) => "core",
            IdentId(7) => "add",
            IdentId(8) => "boolean",
            IdentId(9) => "div",
            IdentId(10) => "eq",
            IdentId(11) => "ge",
            IdentId(12) => "gt",
            IdentId(13) => "le",
            IdentId(14) => "lt",
            IdentId(15) => "mul",
            IdentId(16) => "neg",
            IdentId(17) => "neq",
            IdentId(18) => "sub",
            IdentId(19) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 2:26; [26, 27],
                    symbol_id: SymbolId(21),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(4),
                    span: 3:18; [48, 54],
                    symbol_id: SymbolId(5),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(3),
                    span: 4:25; [81, 82],
                    symbol_id: SymbolId(22),
                },
            },
            IdentRefId(3) => IdentifierRef {
                id: IdentRefId(3),
                ident: Identifier {
                    id: IdentId(1),
                    span: 4:21; [77, 78],
                    symbol_id: SymbolId(3),
                },
            },
            IdentRefId(4) => IdentifierRef {
                id: IdentRefId(4),
                ident: Identifier {
                    id: IdentId(5),
                    span: 5:17; [105, 106],
                    symbol_id: SymbolId(23),
                },
            },
            IdentRefId(5) => IdentifierRef {
                id: IdentRefId(5),
                ident: Identifier {
                    id: IdentId(3),
                    span: 5:19; [107, 108],
                    symbol_id: SymbolId(22),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 4:28; [84, 85],
                    },
                ),
                span: 4:28; [84, 85],
                type_id: TypeId(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    IdentRefId(3),
                    [],
                    [
                        (
                            IdentRefId(2),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 4:21; [77, 87],
                type_id: TypeId(13),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(4),
                        span: 5:17; [105, 106],
                    },
                ),
                span: 5:17; [105, 106],
                type_id: TypeId(13),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Access(
                    ExprId(2),
                    IdentRefId(5),
                ),
                span: 5:17; [105, 108],
                type_id: TypeId(4),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Block(
                    [
                        StmtId(2),
                        StmtId(3),
                    ],
                ),
                span: 3:25; [55, 119],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(4),
                        StmtId(5),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 2:16; [16, 17],
                        symbol_id: SymbolId(3),
                    },
                    [],
                    Provided(
                        [
                            Field {
                                identifier: Identifier {
                                    id: IdentId(3),
                                    span: 2:23; [23, 24],
                                    symbol_id: SymbolId(22),
                                },
                                type_def_id: TypeDefId(0),
                                span: 2:23; [23, 27],
                                type_id: TypeId(12),
                            },
                        ],
                    ),
                    None,
                ),
                span: 2:9; [9, 29],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Let(
                    Identifier {
                        id: IdentId(5),
                        span: 4:17; [73, 74],
                        symbol_id: SymbolId(23),
                    },
                    ExprId(1),
                ),
                span: 4:13; [69, 88],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Ret(
                    Some(
                        ExprId(3),
                    ),
                    Explicit,
                ),
                span: 5:13; [101, 109],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: LetFn(
                    Identifier {
                        id: IdentId(3),
                        span: 3:13; [43, 44],
                        symbol_id: SymbolId(20),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: Some(
                            TypeDefId(1),
                        ),
                        typed_id: TypeId(4),
                    },
                    Provided(
                        ExprId(4),
                    ),
                    None,
                ),
                span: 3:9; [39, 119],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Namespace(
                    Identifier {
                        id: IdentId(6),
                        span: 8:11; [139, 143],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 8:17; [145, 146],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 2:26; [26, 27],
            },
            TypeDefId(1) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(1),
                    ],
                ),
                span: 3:18; [48, 54],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(3),
                        ],
                        IdentId(3): [
                            SymbolId(20),
                        ],
                        IdentId(6): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(6),
                    {
                        IdentId(4): [
                            SymbolId(5),
                        ],
                        IdentId(7): [
                            SymbolId(19),
                        ],
                        IdentId(8): [
                            SymbolId(6),
                        ],
                        IdentId(9): [
                            SymbolId(18),
                        ],
                        IdentId(10): [
                            SymbolId(16),
                            SymbolId(17),
                        ],
                        IdentId(11): [
                            SymbolId(15),
                        ],
                        IdentId(12): [
                            SymbolId(14),
                        ],
                        IdentId(13): [
                            SymbolId(13),
                        ],
                        IdentId(14): [
                            SymbolId(12),
                        ],
                        IdentId(15): [
                            SymbolId(11),
                        ],
                        IdentId(16): [
                            SymbolId(10),
                        ],
                        IdentId(17): [
                            SymbolId(8),
                            SymbolId(9),
                        ],
                        IdentId(18): [
                            SymbolId(7),
                        ],
                        IdentId(19): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct(
                    IdentId(1),
                    StmtId(1),
                ),
                type_id: TypeId(6),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(19),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(4),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(8),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: LetFn(
                    IdentId(3),
                    StmtId(4),
                    [],
                    TypeId(4),
                ),
                type_id: TypeId(11),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: TypeParameter(
                    IdentId(1),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(5),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Field(
                    IdentId(3),
                    StmtId(1),
                    0,
                ),
                type_id: TypeId(12),
            },
            SymbolId(23) => Symbol {
                id: SymbolId(23),
                kind: Let(
                    IdentId(5),
                    StmtId(2),
                ),
                type_id: TypeId(13),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Struct(
                StmtId(1),
                [],
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(11) => Function(
                [],
                TypeId(4),
            ),
            TypeId(12) => Parameter(
                StmtId(1),
                0,
            ),
            TypeId(13) => Struct(
                StmtId(1),
                [
                    TypeId(4),
                ],
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(4): [
                    Explicit(
                        Some(
                            ExprId(3),
                        ),
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
